# stellar

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md
include/: CBoard.h  attack.h  moves.h  perft.h  score.h  utils.h
src/: CBoard.c  CMakeLists.txt  attack.c  engine.c  moves.c  perft.c  score.c  stellar_version.cpp.in  stellar_version.hpp  utils.c
src/arena/: CMakeLists.txt  arena.cpp  engine.cpp  engine.hpp  game.cpp  game.hpp  logger.hpp  match.cpp  match.hpp
src/attack/: CMakeLists.txt  attack.c  attack.cpp  attack.hpp  bishop.cpp  bishop.hpp  king.hpp  knight.hpp  pawn.hpp  pawnb.hpp  pawnw.hpp  queen.hpp  rook.cpp  rook.hpp  slider.hpp
src/attacks/: CMakeLists.txt  attacks.c  attacks.cpp  internal.c  internal.cpp  internal.h  internal.hpp  magic.c  magic.cpp  magic.h  magic.hpp  magic_generate.c  magic_generate.cpp
src/bitboard/: CMakeLists.txt  bitboard.cpp  bitboard.hpp
src/board/: CMakeLists.txt  board.c  board.cpp  board.hpp  zobrist.c  zobrist.cpp  zobrist.hpp
src/engine/: CMakeLists.txt  engine.c  engine.cpp  engine.hpp  evaluate.cpp  evaluate.hpp  score.c  score.cpp  score.h  score.hpp  stats.h  stats.hpp  transposition.c  transposition.cpp  transposition.h  transposition.hpp  uci.cpp  uci.hpp
src/include/: attack.h  attack.hpp  attacks.h  attacks.hpp  board.h  board.hpp  magic.hpp  move.hpp  movelist.hpp  moves.h  moves.hpp  perft.h  perft.hpp  piece.h  piece.hpp  random.h  random.hpp  score.h  transposition.h  utils.h  utils_cpp.hpp  zobrist.h  zobrist.hpp
src/move/: CMakeLists.txt  move.cpp  move.hpp  movelist.cpp  movelist.hpp
src/moves/: CMakeLists.txt  moves.c  moves.cpp  moves_generate.c  moves_generate.cpp  moves_make.c  moves_make.cpp
src/perft/: CMakeLists.txt  perft.c  perft.cpp
src/piece/: CMakeLists.txt  piece.c  piece.cpp  piece.hpp
src/random/: CMakeLists.txt  random.hpp
src/score/: CMakeLists.txt  score.c
src/utils/: CMakeLists.txt  bit.hpp  bitboard.cpp  bitboard.hpp  color.hpp  random.c  random.cpp  repetition.hpp  square.hpp  timer.hpp  utils.c  utils.cpp  utils.hpp  utils_ui.hpp
